Alignments fixed on home

--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -2,6 +2,10 @@
 
 // HOME
 
+.lead {
+  margin-bottom: 40px;
+}
+
 ul.thumbnails {
   margin-left:  auto;
   margin-top:   40px;
@@ -11,11 +15,12 @@ ul.thumbnails {
 }
 
 .thumbnail.home {
-  display: block;
-  padding: 10px;
-  line-height: 20px;
-  box-shadow: none;
+  box-shadow:  none;
+  display:     block;
   font-weight: lighter;
+  height:      280px;
+  line-height: 20px;
+  padding:     10px;
 }
 
 .btn-large.home {
@@ -376,7 +381,7 @@ p.feed-title {
   line-height: 12px;
   font-weight: normal;
   font-size:   16px;
-  margin:      0 10px 0 0;
+  margin:      5px 10px 0 0;
   color:       orange;
 }
 
